# acre

./: README.md  pyproject.toml  setup.cfg
acre/: __init__.py  __main__.py  core.py  launch.py  lib.py
env_prototype/: api.py  core.py  launcher.py
tests/: test_dynamic_environments.py  test_tools.py
tests/samples/sample1/: global.json  maya_2018.json  mtoa_2018.json
