[project]
name = "acre"
version = "1.0.1"
description = "Lightweight cross-platform environment management Python package that makes it trivial to launch applications in their own configurable working environment."
authors = [
    "Roy Nieterau <roy_nieterau@hotmail.com>"
]
license = "LGPL-3.0-only"
readme =" README.md"
python = "^2.7"
homepage = "https://github.com/BigRoy/acre"
repository = "https://github.com/BigRoy/acre"
documentation = "https://github.com/BigRoy/acre"

keywords = ["environment", "pipeline"]

classifiers = [
  "Topic :: Software Development",
  "Topic :: Utilities",
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Libraries :: Python Modules"
]

[build-system]
requires = ["setuptools >= 35.0.2", "wheel"]
build-backend = "setuptools.build_meta"
