[metadata]
name = acre
version = 1.0.0
description = Lightweight cross-platform environment management Python package that makes it trivial to launch applications in their own configurable working environment
long_description = file: README.md, LICENSE.md
keywords = environment, pipeline
license = GNU Lesser General Public License v3 (LGPLv3)
classifiers =
    Topic :: Software Development
    License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)
    Topic :: Utilities
    Intended Audience :: Developers
    Topic :: Software Development :: Libraries :: Python Modules

[options]
zip_safe = True
include_package_data = True
packages = find:
install_requires =
    importlib; python_version == "2.7"
